Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15759

Crash when unloading lnet with routerstat running.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • VMs + lustre 2.15 (ldiskfs)
    • 3
    • 9223372036854775807

      Reproducer:

      # modprobe lustre
      # routerstat 1 > /dev/null &
      # lustre_rmmod
      (Crash ....)
      

      Crash:

      [10595.176267] LNet: Removed LNI 10.0.2.4@tcp
      [10595.978118] BUG: unable to handle kernel paging request at ffffffffc07a1528
      [10595.978143] IP: [<ffffffffb044e093>] SyS_lseek+0x83/0x100
      [10595.978160] PGD d8414067 PUD d8416067 PMD d9b4e067 PTE 0
      [10595.978175] Oops: 0000 [#1] SMP 
      [10595.978185] Modules linked in: rpcsec_gss_krb5 auth_rpcgss nfsv4 dns_resolver nfs lockd grace fscache sunrpc dm_snapshot dm_bufio iosf_mbi crc32_pclmul snd_intel8x0 snd_ac97_codec ac97_bus ppdev snd_seq snd_seq_device ghash_clmulni_intel snd_pcm aesni_intel lrw gf128mul glue_helper ablk_helper cryptd sg snd_timer snd pcspkr soundcore i2c_piix4 parport_pc parport video ip_tables xfs libcrc32c sr_mod sd_mod cdrom crc_t10dif crct10dif_generic ata_generic pata_acpi vmwgfx drm_kms_helper syscopyarea sysfillrect sysimgblt ahci fb_sys_fops ttm libahci ata_piix crct10dif_pclmul crct10dif_common drm crc32c_intel serio_raw libata e1000 drm_panel_orientation_quirks dm_mirror dm_region_hash dm_log dm_mod [last unloaded: libcfs]
      [10595.978374] CPU: 3 PID: 4996 Comm: routerstat Kdump: loaded Tainted: G           OE  ------------   3.10.0-1160.59.1.el7.centos.plus.x86_64 #1
      [10595.978401] Hardware name: innotek GmbH VirtualBox/VirtualBox, BIOS VirtualBox 12/01/2006
      [10595.978418] task: ffff916c95e98000 ti: ffff916c92d9c000 task.ti: ffff916c92d9c000
      [10595.978434] RIP: 0010:[<ffffffffb044e093>]  [<ffffffffb044e093>] SyS_lseek+0x83/0x100
      [10595.978453] RSP: 0018:ffff916c92d9ff10  EFLAGS: 00010282
      [10595.978464] RAX: ffffffffb044d650 RBX: ffff916c975b5300 RCX: ffffffffffffffff
      [10595.978480] RDX: ffffffffc07a1520 RSI: ffff916c92d9ff14 RDI: 0000000000000003
      [10595.978495] RBP: ffff916c92d9ff48 R08: 00007fff83a46530 R09: 00007fff83a46370
      [10595.978510] R10: 0000000000000008 R11: 0000000000000246 R12: 0000000000000000
      [10595.978526] R13: 0000000000000000 R14: 0000000000000000 R15: fffffffffffffff7
      [10595.978541] FS:  00007f54d3266740(0000) GS:ffff916cdfd80000(0000) knlGS:0000000000000000
      [10595.978558] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [10595.978571] CR2: ffffffffc07a1528 CR3: 00000000bf136000 CR4: 00000000000606e0
      [10595.978588] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
      [10595.978603] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
      [10595.978618] Call Trace:
      [10595.978628]  [<ffffffffb09aaf92>] system_call_fastpath+0x25/0x2a
      [10595.978643]  [<ffffffffb09aaed5>] ? system_call_after_swapgs+0xa2/0x13a
      [10595.978657] Code: 8d bb d8 00 00 00 41 83 cc 02 e8 99 d7 54 00 41 83 fd 04 77 73 f6 43 44 04 48 c7 c0 50 d6 44 b0 74 1b 48 8b 53 28 48 85 d2 74 12 <48> 8b 42 08 48 c7 c2 50 d6 44 b0 48 85 c0 48 0f 44 c2 44 89 ea 
      [10595.979698] RIP  [<ffffffffb044e093>] SyS_lseek+0x83/0x100
      [10595.980215]  RSP <ffff916c92d9ff10>
      [10595.980892] CR2: ffffffffc07a1528
      

            eaujames Etienne Aujames
            eaujames Etienne Aujames
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: